--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,11 @@
-<h1>{{title}}</h1>
-<p>User: </p>
-<ul>
-    <li *ngFor="let user of users">
-        {{user.userName}}
-    </li>
-</ul>
+<app-nav></app-nav>
+<div class="container" style="margin-top: 100px;">
+    <ul>
+        <li *ngFor="let user of users">
+            {{user.userName}}
+        </li>
+    </ul>
+    
+</div>
+
 
