--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -23,7 +23,7 @@
     </ul>
 
     <div class="dropdown" *ngIf="(currentUser$ |async) as user" dropdown>
-      <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{user.userName |
+      <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{user.username|
         titlecase}}</a>
       <div class="dropdown-menu" *dropdownMenu>
         <a class="dropdown-item">Edit Profile</a>
