--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -34,5 +34,28 @@
 
 
   </div>
+  <div class="col-8">
+    <tabset class="member-tabset">
+      <tab heading="About {{member.knownAs}}">
+        <h4>Description</h4>
+        <p>{{member.introduction}} </p>
+        <h4>Looking for</h4>
+        <p> {{member.lookingFor}} </p>
+      </tab>
+      <tab heading="Interests">
+        <h4>Interests</h4>
+        <p>{{member.interests}} </p>
+      </tab>
+      <tab heading="Photos" #photoTab="tab">
+        <gallery *ngIf="photoTab.active" 
+        [items]="images" gallerize class="gallery"></gallery>
+      </tab>
+      <tab heading="Messages">
+        <p>Messages </p>
+      </tab>
+
+    </tabset>
+
+  </div>
 
 </div>
