--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
 
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
-      <ng-container *ngIf="currentUser$ |async">
+      <ng-container *ngIf="accountService.currentUser$ |async">
         <li class="nav-item">
           <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
         </li>
@@ -16,23 +16,22 @@
 
       </ng-container>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/errors" routerLinkActive="active">Messages</a>
+        <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
       </li>
 
 
     </ul>
 
-    <div class="dropdown" *ngIf="(currentUser$ |async) as user" dropdown>
-      <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{user.username|
-        titlecase}}</a>
+    <div class="dropdown" *ngIf="(accountService.currentUser$ |async) as user" dropdown>
+      <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{user.userName | titlecase}}</a>
       <div class="dropdown-menu" *dropdownMenu>
-        <a class="dropdown-item">Edit Profile</a>
+        <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
         <a class="dropdown-item" (click)="logout()">Logout</a>
 
       </div>
 
     </div>
-    <form *ngIf="!(currentUser$ |async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+    <form *ngIf="!(accountService.currentUser$ |async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
       <input name="username" [(ngModel)]="model.username" class="form-control me-2" type="text" placeholder="Username">
       <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password"
         placeholder="Password">
